# task_manager

./: .gitignore  README.md  database.py  demo.py  main.py  models.py  pyproject.toml
.claude/skills/fastapi-auth-setup/: CHANGES.md  SKILL.md
.claude/skills/fastapi-auth-setup/references/: security.md
.claude/skills/fastapi-boilerplate-generator/: SKILL.md
.claude/skills/fastapi-endpoint-builder/: SKILL.md
.claude/skills/fastapi-endpoint-builder/references/: anti-patterns.md  async-patterns.md  status-codes.md  validation-patterns.md
.claude/skills/fastapi-model-generator/: SKILL.md
.claude/skills/fastapi-model-generator/references/: anti-patterns.md  field-types.md  relationships.md  validation.md
.claude/skills/fastapi-test-generator/: SKILL.md
helper/: reporter.py
skills/: cleanup.py  daily_brief.py  priority.py  search.py
tests/: test_api.py  test_skills.py
